# JOAO_SANTOS_DDF_TECH_122025

./: .gitignore  README.md  dockerfile  pyproject.toml
data/gold/: DIM_LISTINGS.csv  FACT_REVIEWS.csv  sample_listings_enriched.csv  sample_reviews_enriched.csv
docs/: data_dictionary.md
docs/images/: dim_tempo.csv
nootbooks/: 01-data_raw_quality.ipynb  02-transform_silver.ipynb  03-data_silver_quality.ipynb  genai_nlp.ipynb
src/: upload_to_bq.py
src/app/: app.py  requirements.txt
src/sql/: DIM_TEMPO.sql  neighbourhoods.sql
