[project]
name = "joao-santos-ddf-tech-122025"
version = "0.1.0"
description = "Case Técnico Dadosfera"
authors = [
    {name = "Joao Pedro Santos",email = "87459886+JpedroCSantos@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12.8,<3.13"
dependencies = [
    "ruamel-yaml (<0.18)",
    "dotenv (>=0.9.9,<0.10.0)",
    "great-expectations (==0.18.19)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
